--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
   "Тестовый ключ": "Тест",
   "Язык": "Русский",
-  "Страница не найдена": "Страница не найдена"
-
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу"
 }
