--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "Язык": "English",
   "Страница не найдена": "Page is not found",
   "Произошла непредвиденная ошибка": "Some unexpected error happend",
-  "Обновить страницу": "Refresh the page"
+  "Обновить страницу": "Refresh the page",
+  "Главная": "Main",
+  "О нас": "About us"
 }
