--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "Язык": "Русский",
   "Страница не найдена": "Страница не найдена",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Обновить страницу"
+  "Обновить страницу": "Обновить страницу",
+  "Главная": "Главная",
+  "О нас": "О сайте"
 }
