make a better sidebar, add ui for loki testing and create renderComponent helper for tests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "Тестовый ключ": "Test",
   "Язык": "English",
+  "Короткий язык": "En",
   "Страница не найдена": "Page is not found",
   "Произошла непредвиденная ошибка": "Some unexpected error happend",
   "Обновить страницу": "Refresh the page",
