--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,9 +1,11 @@
 {
   "Тестовый ключ": "Тест",
   "Язык": "Русский",
+  "Короткий язык": "Ru",
   "Страница не найдена": "Страница не найдена",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "Главная": "Главная",
   "О нас": "О сайте"
+  
 }
