create first feature: loginForm

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,8 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "Главная": "Главная",
-  "О нас": "О сайте"
-  
+  "О нас": "О сайте",
+  "Войти": "Войти",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
