--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,8 @@
   "Произошла непредвиденная ошибка": "Some unexpected error happend",
   "Обновить страницу": "Refresh the page",
   "Главная": "Main",
-  "О нас": "About us"
+  "О нас": "About us",
+  "Войти": "Login",
+  "Введите username": "Write username",
+  "Введите пароль": "Write password"
 }
