--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,6 +8,9 @@
   "Главная": "Главная",
   "О нас": "О сайте",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверные данные": "Вы ввели неверные данные"
 }
